--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@
 
 [metadata]
 name = BikeMi-unofficial-API
-description = Add a short description here!
+description = Unofficial API to get info about Milan BikeMi service
 author = Filippo Roggi
 author_email = zzkw35@gmail.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/zzkW35/BikeMi-unofficial-API
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+#    Documentation = https://pyscaffold.org/
+    Source = https://github.com/zzkW35/BikeMi-unofficial-API
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -49,7 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    geopy>=2.1.0,<2.2.0
+    requests>=2.25.1
+    Unidecode>=1.2.0
 
 [options.packages.find]
 where = src
