--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@
 
 [metadata]
 name = BikeMi-unofficial-API
-description = Add a short description here!
+description = Unofficial API to get info about Milan BikeMi service
 author = Filippo Roggi
 author_email = zzkw35@gmail.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/zzkW35/BikeMi-unofficial-API
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+#    Documentation = https://pyscaffold.org/
+    Source = https://github.com/zzkW35/BikeMi-unofficial-API
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -41,7 +41,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.10
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -49,7 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    geopy>=2.1.0,<2.2.0
+    requests>=2.25.1
+    Unidecode>=1.2.0
 
 [options.packages.find]
 where = src
@@ -62,10 +64,10 @@ exclude =
 # PDF = ReportLab; RXP
 
 # Add here test requirements (semicolon/line-separated)
-testing =
-    setuptools
-    pytest
-    pytest-cov
+#testing =
+#    setuptools
+#    pytest
+#    pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
