Change geopy's required version

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    geopy>=2.1.0,<2.2.0
+    geopy==2.2.0
     requests>=2.25.1
     Unidecode>=1.2.0
 
